--- a/first-component/index.html
+++ b/first-component/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>First Component</title>
 </head>
 <body>
-    <h1 id="root">A work of art</h1>
-    <script src='index.js'></script>
+  <div id="root"></div>
+
+  <h1>Teseting</h1>
+  <script src="https://unpkg.com/react/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+
+  <script src="https://unpkg.com/babel-standalone"></script>
+  <script src="index.js" type="text/jsx"></script>
+
+</script>
 </body>
 </html>
